--- a/index.html
+++ b/index.html
@@ -17,7 +17,23 @@
 </head>
 <body>
     <header>
-
+        <div class="container">
+            <div class="tab row">
+                <div class="col-small">
+                    <a href="#">Donna</a>
+                    <a href="#">Uomo</a>
+                    <a href="#">Bambini</a>
+                </div>
+                <div class="col-big">
+                    <img src="img/boolean-logo.png" alt="logo">
+                </div>
+                <div class="col-small">
+                    <i class="fa-solid fa-user"></i>
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-bag-shopping"></i>
+                </div>
+            </div>
+        </div>
     </header>
 
     <main>
@@ -25,7 +41,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
 </html>
