--- a/index.html
+++ b/index.html
@@ -84,14 +84,31 @@
                     <img src="img/6.webp" alt="sesta t-shirt">
                 </div>
                 <div class="description">
-                    
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. In et debitis quasi, dolorum totam magni sunt odit ducimus laboriosam mollitia recusandae dignissimos modi facere ullam sed culpa perferendis quam incidunt?
                 </div>
             </article>
         </section>
     </main>
 
     <footer>
-
+        <div class="container row">
+            <div class="info">
+                <h4>Boolando S.r.l.</h4>
+                <ul>
+                    <li><a href="">informazioni legali</a></li>
+                    <li><a href="">informazioni legali</a></li>
+                    <li><a href="">informazioni legali</a></li>
+                </ul>
+            </div>
+            <div class="social">
+                <h4>Trovaci anche su:</h4>
+                <i class="fa-brands fa-square-twitter"></i>
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+                <i class="fa-brands fa-square-pinterest"></i>
+                <i class="fa-brands fa-square-youtube"></i>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
